# src/lib/http/routers/project.route.ts
@@ -4,12 +4,14 @@ import {
   createProject,
   updateProject,
   deleteProject,
+  sortProjects,
 } from '@/lib/http/controllers/projects.controller'
 
 const projects = new Hono()
 
 projects.get('/', getProjects)
 projects.post('/', createProject)
+projects.patch('/sort', sortProjects)
 projects.put('/:id', updateProject)
 projects.delete('/:id', deleteProject)
 
