# src/lib/spec/schema/openapi.yaml
@@ -253,6 +253,51 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ProjectCreateRequest'
+  /projects/sort:
+    patch:
+      operationId: ProjectsService_sortProjects
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - success
+                  - message
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Project'
+                  error:
+                    type: string
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      tags:
+        - Projects
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProjectSortRequest'
   /projects/{id}:
     put:
       operationId: ProjectsService_updateProject
@@ -723,7 +768,6 @@ components:
         - slug
         - tags
         - galleries
-        - displayOrder
       properties:
         title:
           type: string
@@ -762,6 +806,15 @@ components:
           type: string
         description:
           type: string
+    ProjectSortRequest:
+      type: object
+      required:
+        - projectIds
+      properties:
+        projectIds:
+          type: array
+          items:
+            type: string
     ProjectUpdateRequest:
       type: object
       properties:
